Stlye nav bette rand fix footer vertical alignment

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,15 @@
 body {
   background-color: #546e9d;
   margin: 0;
+  min-height: 100vh;
 }
 
 #root {
   max-width: 1600px;
-  margin: auto;
+  min-height: 100vh;
   width: fit-content;
+
+  display: flex;
+  flex-direction: column;
+  margin: auto;
 }
